_less/main.less
/* ... */
#menu li:hover a,#menu li.active a{
color:#000;
}
#menu li:hover,#menu li.active{
background-color:#fff;
border:1px solid #d8d8d8;
box-shadow:0px 0px 14px rgba(0,0,0,0.15);
-moz-box-shadow:0px 0px 14px rgba(0,0,0,0.15);
-webkit-box-shadow:0px 0px 14px rgba(0,0,0,0.15);
}

#content{
margin-top:5px;
position:relative;
left:-40px;
padding:15px 210px 20px 40px;
width:740px;
text-align:justify;
background-color:#fff;
min-height:400px;
border-right:2px solid #ebebeb;
border-left:2px solid #ebebeb;
border-top:2px solid #ebebeb;
box-shadow:0px 15px 70px rgba(0, 0, 0, 0.2);
-moz-box-shadow:0px 15px 70px rgba(0, 0, 0, 0.2);
-webkit-box-shadow:0px 15px 70px rgba(0, 0, 0, 0.2);
}

.index,.index ul,.index li{
list-style:none;
padding:0px;
margin:0px;
}
.index{
padding:20px;
border:2px dashed #4892b2;
display:inline-block;
}
.index>li>a{
font-weight:bold;
}
.index>ul{
padding:20px 0px 20px 20px;
}
.index a,.index a:link,.index a:active,.index a:visited{
display:block;
text-decoration:none;
}

.box{
width:600px;
border:2px dashed #4892b2;
padding:0px 20px 0px 20px;
}

.contributors{
width:900px;
}
.contributors a{
font-size:13px;
}
.contributors td{
padding:6px 0px;
}

.ressources li{
font-size:18px;
padding-top:6px;
}
.ressources a,.ressources a:link,.ressources a:active,.ressources a:visited{
text-decoration:none;
}
.ressources>li{
font-weight:bold;
}
.ressources>li>ul>li{
font-weight:normal;
}

.list>li{
padding:5px 0px 5px 0px;
}

.preview{
width:900px;
}
.previewcol{
clear:both;
}
.previewcol .previewrow:first-child{
padding-left:0px;
}
.previewrow{
float:left;
width:270px;
text-align:justify;
padding-left:40px;
position:relative;
}
.previewrow>h2{
font-size:18px;
}
.previewrow>span>a>img{
display:block;
margin:auto;
margin-bottom:10px;
}
.previewrow>span>a,.previewrow>span>a:visited,.previewrow>span>a:link,.previewrow>span>a:active{
font-size:14px;
text-align:center;
text-decoration:none;
font-weight:bold;
width:72px;
height:110px;
display:inline-block;
vertical-align:top;
}
.previewrow>span>span{
opacity:0;
transition:opacity 400ms ease-out;
-moz-transition:opacity 400ms ease-out;
-webkit-transition:opacity 400ms ease-out;
width:0px;
height:0px;
display:inline-block;
position:absolute;
left:-110px;
right:-110px;
padding:0px 30px;
margin-top:-270px;
background:url(/img/bubble.svg) bottom center no-repeat;
z-index:1000;
overflow:hidden;
}
.previewrow>span>span>h2{
margin-top:20px;
}
.previewrow>span:hover>span{
opacity:1;
width:auto;
height:280px;
}
.previewrow>span{
display:inline-block;
position:relative;
margin-right:22px;
margin-bottom:22px;
}
.previewrow>span.lastspan{
margin-right:0px;
}
.previewrow>span>span>div{
position:absolute;
top:28px;
right:30px;
}
.previewrow>span>span>div>img{
margin-left:4px;
}
.previewrow>span>span>h2:first-child+div+p{
font-size:15px;
}
.previewrow>span>span>h2:first-child+div+p+p{
text-align:center;
position:absolute;
width:290px;
top:190px;
left:0px;
}
.previewrow>span>span a,.previewrow>span>span a:link,.previewrow>span>span a:visited,.previewrow>span>span a:active{
font-weight:bold;
text-decoration:none;
font-size:20px;
}
.previewrow .walletwarning a,.previewrow .walletwarning a:link,.previewrow .walletwarning a:visited,.previewrow .walletwarning a:active{
color:#b95357;
}
.previewrow .walletwarning{
background:url(/img/bubblewarn.svg) bottom center no-repeat;
}
.previewrow .walletnormal{
background:url(/img/bubble.svg) bottom center no-repeat;
}


.alert-message{
background-color:#fff;
}
.alert-message>div{
background-color:#fff;
background-color:#c5251f;
}
.alert-message.error>div{
background-color:#c5251f;
}
.alert-message.success>div{
background-color:#489e48;
}
.alert-message.info>div{
background-color:#517ea7;
}
.alert-message>div>div{
margin:auto;
width:960px;
padding:10px;
}
.alert-message,.alert-message a,.alert-message a:link,.alert-message a:active,.alert-message a:visited{
color:#fff;
}

.versiontext{
text-align:left;
}

.download a{
font-size:20px;
}

.summary{
font-size:20px;
}

.foundation{
width:500px;
margin:40px auto;
border:2px dashed #dfdfdf;
padding:40px;
border-radius:9px;
-webkit-border-radius:9px;
}

#footer{
position:relative;
left:-40px;
padding-left:40px;
padding-bottom:40px;
text-align:left;
margin-right:30px;
font-size:14px;
background-color:#fff;
width:950px;
border-right:2px solid #ebebeb;
border-left:2px solid #ebebeb;
border-bottom:2px solid #ebebeb;
}
#footer>div{
float:left;
margin-right:200px;
padding-top:6px;
border-top:#cfcfcf 2px solid;
}

@font-face{
font-family:'UbuntuRegular';
src:url('/font/ubuntu-r-webfont.eot');
src:url('/font/ubuntu-r-webfont.eot?iefix') format('eot'),
url('/font/ubuntu-r-webfont.woff') format('woff'),
url('/font/ubuntu-r-webfont.ttf') format('truetype'),
url('/font/ubuntu-r-webfont.svg#webfontKT0zjHSC') format('svg');
font-weight:normal;
font-style:normal;
}
@font-face{
font-family:'UbuntuItalic';
src:url('/font/ubuntu-ri-webfont.eot');
src:url('/font/ubuntu-ri-webfont.eot?iefix') format('eot'),
url('/font/ubuntu-ri-webfont.woff') format('woff'),
url('/font/ubuntu-ri-webfont.ttf') format('truetype'),
url('/font/ubuntu-ri-webfont.svg#webfontGetaoUfe') format('svg');
font-weight:normal;
font-style:normal;
}
@font-face{
font-family:'UbuntuBold';
src:url('/font/ubuntu-b-webfont.eot');
src:url('/font/ubuntu-b-webfont.eot?iefix') format('eot'),
url('/font/ubuntu-b-webfont.woff') format('woff'),
url('/font/ubuntu-b-webfont.ttf') format('truetype'),
url('/font/ubuntu-b-webfont.svg#webfontEreyFiHC') format('svg');
font-weight:normal;
font-style:normal;
}
@font-face{
font-family:'UbuntuBoldItalic';
src:url('/font/ubuntu-bi-webfont.eot');
src:url('/font/ubuntu-bi-webfont.eot?iefix') format('eot'),
url('/font/ubuntu-bi-webfont.woff') format('woff'),
url('/font/ubuntu-bi-webfont.ttf') format('truetype'),
url('/font/ubuntu-bi-webfont.svg#webfontf1YowZka') format('svg');
font-weight:normal;
font-style:normal;
}

